--- a/style.css
+++ b/style.css
@@ -24,3 +24,10 @@
   	margin-bottom: 2.5%;
   	border-bottom: 1px dotted #df3f3d;
   }
+
+  option{
+  	font-family: "lato", sans-serif;
+  	font-weight: 700;
+  	font-style: italic;
+  	text-transform: uppercase;
+  }
